--- a/resource/language/ar.json
+++ b/resource/language/ar.json
@@ -13,5 +13,6 @@
   "detail_id_required": "المعرف مطلوب للحصول على التفاصيل",
   "delete_id_required": "المعرف مطلوب للحذف",
   "user_deleted": "تم حذف المستخدم",
-  "age_not_valid": "يجب أن يكون العمر أكثر من 18 عامًا"
+  "age_not_valid": "يجب أن يكون العمر أكثر من 18 عامًا",
+  "limit&page_number": "الحد ورقم الصفحة المطلوبة"
 }
